--- a/views/layouts/mainLarge.handlebars
+++ b/views/layouts/mainLarge.handlebars
@@ -15,7 +15,7 @@
       <a href="/" class="button1">Home</a>
       <a href="/favorites" class="button1">Favorites</a>
       {{#if loggedIn}}
-      <button id="logout" class="btn-no-style">Logout</button>
+      <a href="/logout" class="button1">Logout</a>
       <img id="userimg" src="{{userimg}}">
       {{else}}
       <a href="/login" class="button1">Login</a>
