--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,32 @@
 <div class="login-card">
     <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
+    <p id="errorText"></p>
+    <form class="form signup-form" id="submitForm">
       <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <label for="name-signup">Name:</label>
+        <input class="form-input" type="text" id="firstName-signup" placeholder="First" required autofocus/>
+        <input class="form-input" type="text" id="lastName-signup" placeholder="Last" required/>
       </div>
       <div class="form-group">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="email" id="email-signup" required/>
+      </div>
+      <div class="form-group">
+        <label for="phone-signup">Phone Number:</label>
+        <input class="form-input" type="tel" id="phone-signup" required/>
       </div>
       <div class="form-group">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="password" id="password-signup" required/>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <label for="password-signup">Confirm Password:</label>
+        <input class="form-input" type="password" id="password-signup" required/>
+      </div>
+      <div class="form-group">
+        <button type="submit">signup</button>
       </div>
     </form>
   </div>
+
+  <script src="/js/signupHandler.js"></script>
