adds login handlebar and loginHandler.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graphical Reservation</title>
-  <style src="/Table-Reservation/public/css/styleSmall.css"></style>
+  <link rel="stylesheet" href="/css/styleSmall.css"/>
 </head>
 
 <body>
@@ -34,6 +34,5 @@
     {{/if}}
     <p>Created by XYZ</p>
   </footer>
-  <script src="/js/mainSmall.css"></script>
 </body>
 </html>
