Ties JS files to respective handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,9 @@
 <div>
-    <form id="signinForm">
+    <form class="login-form">
         <input type="email" placeholder="Email">
         <input type="password" placeholder="Password">
         <button type="submit">Login</button>
     </form>
 </div>
+
+<script src="/js/login.js"></script>
