working on the css for the login page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,6 +34,6 @@
     {{/if}}
     <p>Created by XYZ</p>
   </footer>
-  <script src="/js/mainSmall.css"></script>
+  {{!-- <script src="/js/mainSmall.css"></script> --}}
 </body>
 </html>
