updating the button styling/adding styling to the login and signup pages

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
     {{#if loggedIn}}
     <input type="text" placeholder="Find a Restaurant...">
     {{else}}
-    <a href="/signup">Sign Up</a>
+    <a href="/signup" class="button1">Sign Up</a>
     {{/if}}
 
     <h2>About:</h2>
