--- a/public/css/styleSmall.css
+++ b/public/css/styleSmall.css
@@ -1,32 +1,106 @@
 :root {
-  --primary: #3d5852;
+  --primary: #50736c;
   --secondary: #86938f;
-  --tertiary: #5e877f;
-  --quatrinary: #6c6b67;
+  --tertiary: #6d938c;
+  --quatrinary: #979384;
   --light: #e3e4e3;
   --dark: #182c23;
   --error: rgb(228, 46, 1);
   --border-radius: 0.3rem;
+}
+
+
+body {
+  font-family: Arial;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: flex-start;
+  background-color: var(--quatrinary);
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+aside {
+  flex: 0;
+  background-color: var(--tertiary);
+  padding: 80px;
+  text-align: left;
+  color: var(--light);
+}
+
+
+nav {
+  display: flex;
+  background-color: var(--secondary);
+  transition: all 0.15s;
+}
+
+.card {
+  margin: 20px;
+  flex: 0 1 300px;
+  border: 7px double var(--dark);
+  border-radius: 10px;
+  background-color: var(--light);
+  color: var(--dark);
+}
+
+.login-card {
+  margin: 0 0 20px 0;
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 5px;
+  border: 3px solid var(--dark);
+  border-radius: var(--border-radius);
+  border-style: double;
+  border-width: thick;
+  background-color: #577a7c;
+  color: var(--light);
+}
+
+.card header {
+  color: var(--light);
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 0;
+  background-color: var(--tertiary);
+  padding: 0.625rem;
+  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
+}
+
+.card-body {
+  font-size: 1.4rem;
+  text-align: center;
+  font-weight: bold;
 }
 nav {
   display: flex;
   background-color: var(--secondary);
 }
 
-nav a.button1 {
+nav a.button1, a.button1 {
   display: inline-block;
   padding: 0.5em 3em;
-  border: 0.16em solid #FFFFFF;
+  border: 0.16em solid #b7cce6;
   margin: 0 0.3em 0.3em 0;
   box-sizing: border-box;
   text-decoration: none;
   text-transform: uppercase;
   font-family: 'Roboto',sans-serif;
   font-weight: 400;
-  color: #FFFFFF;
+  color: #dde2e7;
   text-align: center;
   transition: all 0.15s;
 }
+ a.button1{
+  justify-content: center;
+  align-items: center;
+ }
  
 a.button1:hover{
   color:#DDDDDD;
