--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,6 +4,7 @@
         <input type="password" placeholder="Password">
         <button type="submit">Login</button>
     </form>
+    <a href="/" class="button1">Return to about me page</a>
 </div>
 
 <script src="/js/login.js"></script>
