--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <div>
     <div class="heroContainer">
-        <img src="/images/hero.png">
+        {{!-- <img src="/images/hero.png"> --}}
     </div>
 
     {{#if loggedIn}}
