--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <img id="userimg" src="{{userimg}}">
       <a href="/logout" class="button1">Logout</a>
       {{else}}
-      <img id="logo" src="/images/logo.png">
+      {{!-- <img id="logo" src="/images/logo.png"> --}}
       <a href="/login" class="button1">Login</a>
       {{/if}}
     </nav>
@@ -30,7 +30,7 @@
 
   <footer>
     {{#if loggedIn}}
-      <img id="logoblock" src="smallLogo.png">
+      {{!-- <img id="logoblock" src="smallLogo.png"> --}}
     {{/if}}
     <p>Created by XYZ</p>
   </footer>
