fixes main handlebar bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,19 +11,19 @@
 <body>
   <header>
     <nav>
-      <!-- {{#if loggedIn}} -->
+      {{#if loggedIn}}
       <a href="/" class="button1">Home</a>
-      <!-- <img id="userimg" src="{{userimg}}">
+      <img id="userimg" src="{{userimg}}">
       <a href="/logout" class="button1">Logout</a>
-      {{else}} -->
+      {{else}}
       <h1>Graphical Reservation</h1>
       <a href="/login" class="button1">Login</a>
-      <!-- {{/if}} -->
+      {{/if}}
     </nav>
   </header>
 
   <main>
-    {{body}}
+    {{{body}}}
   </main>
 
   <footer>
