fixes route for hero image

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <div class="heroContainer">
     <div class="bottomLayer">
-        <img class="heroOne" src="TableThree.jpg">
+        <img class="heroOne" src="/images/TableThree.jpg">
     </div>
     <div class="topLayer">
     <!-- {{#if loggedIn}}
