bug fixing for post route

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,14 +17,14 @@
       </div>
       <div class="form-group">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" required/>
+        <input class="form-input" type="password" id="passOne-signup" required/>
       </div>
       <div class="form-group">
         <label for="password-signup">Confirm Password:</label>
-        <input class="form-input" type="password" id="password-signup" required/>
+        <input class="form-input" type="password" id="passTwo-signup" required/>
       </div>
       <div class="form-group">
-        <button type="submit">signup</button>
+        <button id="submit" type="submit">signup</button>
       </div>
     </form>
   </div>
