fixes login/out/signup routes on front end

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,11 +3,11 @@
         <img class="heroOne" src="/images/TableThree.jpg">
     </div>
     <div class="topLayer">
-    <!-- {{#if loggedIn}}
+    {{#if loggedIn}}
             <input type="text" placeholder="Find a Restaurant...">
-        {{else}} -->
+        {{else}}
             <a href="/signup" class="button1">Sign Up</a>
-    <!-- {{/if}} -->
+    {{/if}}
     </div>
 </div>
 
