fixing the place holders and input boxes on signup page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,6 +181,41 @@ footer{
   border-width: thick;
   background-color: #577a7c;
   color: var(--light);
+  text-align: center;
+  justify-content: space-evenly;
+}
+.form-input{
+  background: rgba(255,255,255,.5);
+  border: none;
+  justify-content:center ;
+  align-content: center;
+  display: flex;
+  flex:content;
+  justify-self: center;
+  padding: auto;
+  margin: auto;
+  margin-top: 20px;
+  width: 260px;
+  border: none;
+  
+
+}
+button {
+  display: inline-block;
+  padding: 0.5em 3em;
+  border: 0.16em solid #b7cce6;
+  margin: 0 0.3em 0.3em 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 400;
+  color: #dde2e7;
+  text-align: center;
+  transition: all 0.15s;
+  background-color: var(--shadow);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  align-self: center;
 }
 
 .card header {
