--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graphical Reservation</title>
-  <link rel="stylesheet" href="/css/styleSmall.css"/>
+  <link rel="stylesheet" href="/css/style.css"/>
 </head>
 
 <body>
