minor code cleanup

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
 <div>
     <form class="login-form">
-        <input id="email-login" type="email" placeholder="Email">
-        <input id="password-login" type="password" placeholder="Password">
-        <button id="loginBtn" type="submit">Login</button>
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Password">
+        <button type="submit">Login</button>
     </form>
     <a href="/" class="button1">Return to about me page</a>
 </div>
 
-<script src="/js/loginHandler.js"></script>
+<script src="/js/login.js"></script>
