--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,22 +9,22 @@
       </div>
       <div class="form-group">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="email" placeholder = "email@email.com" id="email-signup" required/>
+        <input class="form-input" type="email" id="email-signup" required/>
       </div>
       <div class="form-group">
         <label for="phone-signup">Phone Number:</label>
-        <input class="form-input" type="tel" placeholder="16145326732" id="phone-signup" required/>
+        <input class="form-input" type="tel" id="phone-signup" required/>
       </div>
       <div class="form-group">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" placeholder="password" id="passOne-signup" required/>
+        <input class="form-input" type="password" id="password-signup" required/>
       </div>
       <div class="form-group">
         <label for="password-signup">Confirm Password:</label>
-        <input class="form-input" type="password" placeholder="password" id="passTwo-signup" required/>
+        <input class="form-input" type="password" id="password-signup" required/>
       </div>
       <div class="form-group">
-        <button id="submit" type="submit">signup</button>
+        <button type="submit">signup</button>
       </div>
     </form>
   </div>
