--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
       {{#if loggedIn}}
       <a href="/" class="button1">Home</a>
       <img id="userimg" src="{{userimg}}">
-      <button id="logout" type="submit">Logout</button>
+      <a href="/logout" class="button1">Logout</a>
       {{else}}
       <h1>Graphical Reservation</h1>
       <a href="/login" class="button1">Login</a>
@@ -33,7 +33,5 @@
     <p>Created by XYZ</p>
   </footer>
 </body>
-{{#if loggedIn}}
-<script src="/js/logout.js"></script>
-{{/if}}
+
 </html>
