logout fixed again

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
       {{#if loggedIn}}
       <a href="/" class="button1">Home</a>
       <img id="userimg" src="{{userimg}}">
-         <button id="logout" type="submit">Logout</button>
+         <button id="logoutBtn" type="submit">Logout</button>
       {{else}}
       <h1>Graphical Reservation</h1>
       <a href="/login" class="button1">Login</a>
