--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,11 +51,12 @@ nav {
   border-bottom: thick double var(--light);
 }
 
-nav a.button1, a.button1 {
+nav a.button1, a.button1, button {
   display: inline-block;
   padding: 0.5em 3em;
   border: 0.16em solid #b7cce6;
   margin: 0 0.3em 0.3em 0;
+  border-radius: 10px;
   box-sizing: border-box;
   text-decoration: none;
   text-transform: uppercase;
@@ -75,12 +76,12 @@ a.button1{
   margin:0.4em auto;
  }
  
-a.button1:hover{
+a.button1:hover, button{
   color:#DDDDDD;
   border-color:#DDDDDD;
   }
 
-a.button1:active{
+a.button1:active, button{
   color:#BBBBBB; 
   border-color:#BBBBBB;
   }
@@ -195,28 +196,13 @@ footer{
   justify-self: center;
   padding: auto;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   width: 260px;
   border: none;
+  border-bottom-right-radius: 5px;
   
 
-}
-button {
-  display: inline-block;
-  padding: 0.5em 3em;
-  border: 0.16em solid #b7cce6;
-  margin: 0 0.3em 0.3em 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-family: 'Roboto',sans-serif;
-  font-weight: 400;
-  color: #dde2e7;
-  text-align: center;
-  transition: all 0.15s;
-  background-color: var(--shadow);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  align-self: center;
 }
 
 .card header {
