--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -1,5 +1,48 @@
 <div>
-    <svg id="floorPlan" src="{{restFloor}}">
+    <div class="map-container">
+      <svg width="116.35468mm" height="84.970596mm" viewBox="0 0 116.35468 84.970596" version="1.1" id="svg5" class="draggable">
+        <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1" transform="translate(-43.86263,-73.87013)">
+          <path
+            id="floorplan-outline"
+            style="fill-opacity:0"
+            d="M 44.39513,78.809967 H 159.68481 V 158.30823 H 44.39513 Z" />
+          <path
+            id="table1"
+            
+            d="m 54.375435,87.413673 h 26.49942 v 13.765937 h -26.49942 z" />
+          <path
+            id="table2"
+            
+            d="m 54.203362,115.28968 h 26.49942 v 13.76593 h -26.49942 z" />
+          <path
+            id="table3"
+            
+            d="m 123.72132,86.381233 h 26.49942 v 13.765937 h -26.49942 z" />
+          <path
+            id="table4"
+            
+            d="m 123.72132,115.63383 h 26.49942 v 13.76593 h -26.49942 z" />
+          <path
+            id="table5"
+            
+            d="M 89.306488,87.069527 H 115.80591 V 100.83546 H 89.306488 Z" />
+          <path
+            id="table6"
+            class="table"
+            d="m 88.618195,115.63383 h 26.499415 v 13.76593 H 88.618195 Z" />
+          <text
+            xml:space="preserve"
+            style="font-size:3.175px;fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:0.065;stroke-dasharray:none;stroke-opacity:1;paint-order:fill markers stroke"
+            x="94.296638"
+            y="76.31488"
+            id="text1416"><tspan
+              sodipodi:role="line"
+              id="tspan1414"
+              style="stroke-width:0.065;stroke-dasharray:none"
+              x="94.296638"
+              y="76.31488">Kitchen</tspan></text>
+        </g>
+      </svg>
 
     <script src="/js/floorPlanGUI"></script>
 </div>
