giving structure to modal

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,11 +3,11 @@
         <img class="heroOne" src="/images/TableThree.jpg">
     </div>
     <div class="topLayer">
-    <!-- {{#if loggedIn}}
+     {{#if loggedIn}}
             <input type="text" placeholder="Find a Restaurant...">
-        {{else}} -->
+        {{else}} 
             <a href="/signup" class="button1">Sign Up</a>
-    <!-- {{/if}} -->
+     {{/if}} 
     </div>
 </div>
 
@@ -15,7 +15,7 @@
     <div class="inner">
         <h2>About:</h2>
         <p>Our team works with restaurants to make the reservation process easy! Each location has a floor plan laid out
-            so you can choose exactly where you want to sit. Book dirrectly through us and manage your reservation
+            so you can choose exactly where you want to sit. Book directly through us and manage your reservation
             through your account.</p>
     </div>
 </card>
