test floorplan event listener

--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -20,11 +20,11 @@
             d="m 123.72132,86.381233 h 26.49942 v 13.765937 h -26.49942 z" />
           <path
             id="table4"
-            
+            class="table"
             d="m 123.72132,115.63383 h 26.49942 v 13.76593 h -26.49942 z" />
           <path
             id="table5"
-            
+            class="table"
             d="M 89.306488,87.069527 H 115.80591 V 100.83546 H 89.306488 Z" />
           <path
             id="table6"
@@ -44,5 +44,5 @@
         </g>
       </svg>
 
-    <script src="/js/floorPlanGUI"></script>
+    <script src="/js/floorPlanGUI.js"></script>
 </div>
