updating the modal to the correct file

--- a/views/restaurantdetails.handlebars
+++ b/views/restaurantdetails.handlebars
@@ -1,13 +1,14 @@
 <div>
-    <img src="{{restImage}}">
+  <img src='{{restImage}}' />
 
-    <h2>{{restName}}</h2>
+  <h2>{{restName}}</h2>
 
-    <p>{{restDesc}}</p>
+  <p>{{restDesc}}</p>
 
-    <a href="{{restMenu}}">Veiw Menu</a>
+  <a href='{{restMenu}}'>Veiw Menu</a>
 
-    <p>{{restHours}}</p>
+  <p>{{restHours}}</p>
 
-    <a href="/reserve/{{restID}}">Reserve a Table</a>
+  <a href='/reserve/{{restID}}'>Reserve a Table</a>
+
 </div>
