--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,15 +76,15 @@ a.button1{
   margin:0.4em auto;
  }
  
-a.button1:hover, button{
+/* a.button1:hover, button:hover{
   color:#DDDDDD;
   border-color:#DDDDDD;
   }
 
-a.button1:active, button{
+a.button1:active, button:active{
   color:#BBBBBB; 
   border-color:#BBBBBB;
-  }
+  } */
 
 /* HERO SECTION */
 
@@ -200,7 +200,7 @@ footer{
   margin-bottom: 5px;
   width: 260px;
   border: none;
-  border-bottom-right-radius: 5px;
+  border-radius: 15px 15px 15px 15px;
   
 
 }
@@ -213,6 +213,7 @@ footer{
   background-color: var(--tertiary);
   padding: 0.625rem;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
+ 
 }
 
 .card-body {
@@ -221,25 +222,26 @@ footer{
   font-weight: bold;
 }
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #d6b6b6;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%; 
+  border-radius: 15px;
 }
 
 /* The Close Button */
@@ -259,18 +261,26 @@ footer{
 /* Modal Header */
 .modal-header {
   padding: 2px 16px;
-  background-color: #ead1ca;
+  background-color: #798099;
   color: white;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 /* Modal Body */
-.modal-body {padding: 2px 16px;}
+.modal-body {
+  padding: 2px 16px;
+ 
+}
+
 
 /* Modal Footer */
 .modal-footer {
   padding: 2px 16px;
-  background-color: #ead1ca;
+  background-color: #798099;
   color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-left-radius: 15px;
 }
 
 /* Modal Content */
@@ -282,8 +292,8 @@ footer{
   border: 1px solid #888;
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-name:animatetop;
+  animation-duration: 0.4s;
 }
 
 /* Add Animation */
@@ -326,7 +336,7 @@ footer{
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: rgb(116, 93, 93);
+  background-color: rgb(36, 30, 30);
 }
 
 .dropdown-content {
@@ -353,4 +363,42 @@ footer{
 
 .show {
   display: block;
+}
+.slidecontainer {
+  width: 30%; 
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none; 
+  appearance: none;
+  width: 100%;
+  height: 25px; 
+  background: #d3d3d3;
+  outline: none; 
+  opacity: 0.7; 
+  -webkit-transition: .2s; 
+  transition: opacity .2s;
+}
+
+
+.slider:hover {
+  opacity: 1; 
+}
+
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; 
+  appearance: none;
+  width: 25px; 
+  height: 25px; 
+  background: #085a7a;
+  cursor: pointer; 
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #085a7a; 
+  cursor: pointer; 
 }
