--- a/views/restaurantdetails.handlebars
+++ b/views/restaurantdetails.handlebars
@@ -9,5 +9,5 @@
 
     <p>{{restHours}}</p>
 
-    <a href="/reserve/{{restID}}">Reserve a Table</a>
+    <a href="api/restaurants/reserve/{{restID}}">Reserve a Table</a>
 </div>
