--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,5 @@
 <div>
-    {{#each searchRes as |result|}}
-    {{> search-details}}
+    {{#each results as |result|}}
+    {{> search-details }}
     {{/each}}
 </div>
