--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -43,6 +43,6 @@
               y="76.31488">Kitchen</tspan></text>
         </g>
       </svg>
-
+    </div>
     <script src="/js/floorPlanGUI"></script>
 </div>
