added profile button logic and updated user route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
   <li><a href="/" class="button1">Home</a>
   </li> 
   <li><button id="logoutBtn" type="submit">Logout</button></li>
-  <li><a href="/profile" class="button1">Profile</a>
+  <li><a href="api/users/profile" class="button1" id="profileBtn">Profile</a>
   </li>
  </div>
 
