--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-
+<p style="background-image: url('/images/empty-table.jpg');">
 <div class="login-card">
     <h2 class="page-title">Signup</h2>
     <p id="errorText"></p>
@@ -27,7 +27,7 @@
       <div class="form-group">
         <button id="submit" type="submit">signup</button>
       </div>
-    </form>
+    </form></p>
   </div>
 
   <script src="/js/signupHandler.js"></script>
