fixes pathing for svgs

--- a/views/partials/search-details.handlebars
+++ b/views/partials/search-details.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <a href="api/restaurants/{{this.restaurant_id}}">
+    <a href="../{{this.restaurant_id}}">
     <img src="/images/{{this.image_link}}" alt="Icon for {{this.name}}">
 
     <h3>{{this.name}}</h3>
