update pizza restaurant id and post call to make new reservation

--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -3,9 +3,7 @@
     {{{floorplan}}}
   </div>
 
-  <button id='myBtn'>Check your Reservations</button>
   <div id='myModal' class='modal'>
-
     <div class='modal-content'>
       <div class='modal-header'>
         <span class='close'>&times;</span>
@@ -30,7 +28,7 @@
     </div>
   </div>
 
-  <script src="/js/floorPlanGUI"></script>
+  <script src="/js/floorPlanGUI.js"></script>
   <script src="/js/modalHandler.js"></script>
 </div>
 
