--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -1,6 +1,6 @@
 <div>
   <div class="map-container">
-    {{{floorplan}}}
+    {{{restaurantObject.floorplan}}}
   </div>
 
   <div id='myModal' class='modal'>
@@ -15,7 +15,7 @@
             <p>how many are in your party:</p>
             <input type='range' min='1' max='10' value='2' class='slider' id='myRange' />
             <p>Reservation for: <span id='customer_id'></span></p>
-            <p id="testuserid">
+           
             {{!-- <label for='fname'>First name:</label>
             <input type='text' id='fname' name='fname' /><br /><br /> --}}
           </div>
