--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,52 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graphical Reservation</title>
-  <link rel="stylesheet" href="/css/style.css" />
-</head>
+  <head>
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>Graphical Reservation</title>
+    <link rel='stylesheet' href='/css/style.css' />
+  </head>
 
-<body>
-  <header>
-    <nav>
-      {{#if loggedIn}}<button class="dropbtn" onclick="myFunction()">Menu<i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-content" id="myDropdown">
-  <li><a href="/" class="button1">Home</a>
-  </li> 
-  <li><button id="logoutBtn" type="submit">Logout</button></li>
-  <li><a href="api/users/profile" class="button1" id="profileBtn">Profile</a>
-  </li>
- </div>
+  <body>
+    <header>
+      <nav>
+        {{#if loggedIn}}<button class='dropbtn' onclick='myFunction()'>Menu<i
+              class='fa fa-caret-down'
+            ></i>
+          </button>
+          <div class='dropdown-content' id='myDropdown'>
+            <a href='/' class='button1'>Home</a>
+            <a
+              href="/profile"
+              class='button1'
+              id='profileBtn'
+            >Profile</a>
 
-  <img id="userimg" src="{{userimg}}">
+          </div>
 
-   
-    
-    
-      {{else}}
-      <h1>Graphical Reservation</h1>
-      <a href="/login" class="button1">Login</a>
-      {{/if}}
-    </nav>
-  </header>
+          <img id='userimg' src='{{userimg}}' />
 
-  <main>
-    {{{body}}}
-  </main>
+          <button id='logoutBtn' type='submit'>Logout</button>
 
-  <footer>
-    <!-- {{#if loggedIn}}
+        {{else}}
+          <h1>Graphical Reservation</h1>
+          <a href='/login' class='button1'>Login</a>
+        {{/if}}
+      </nav>
+    </header>
+
+    <main>
+      {{{body}}}
+    </main>
+
+    <footer>
+      <!-- {{#if loggedIn}}
       <img id="logoblock" src="smallLogo.png">
     {{/if}} -->
-    <p>Created by XYZ</p>
-  </footer>
-</body>
-{{#if loggedIn}}
-<script src="/js/logout.js"></script>
-<script src="js/modalHandler.js"></script>
-{{/if}}
+      <p>Created by XYZ</p>
+    </footer>
+  </body>
+  {{#if loggedIn}}
+    <script src='/js/logout.js'></script>
+    <script src='js/navmenu.js'></script>
+  {{/if}}
 
 </html>
