start profile page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
           <div class='dropdown-content' id='myDropdown'>
             <a href='/' class='button1'>Home</a>
             <a
-              href="/profile"
+              href="/api/users/profile"
               class='button1'
               id='profileBtn'
             >Profile</a>
