updating alerts to be inner html

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,6 +4,7 @@
         <input id="password-login" type="password" placeholder="Password">
         <button id="loginBtn" type="submit">Login</button>
     </form>
+    <p id="errorText"></p>
     <a href="/" class="button1">Return to about me page</a>
 </div>
 
