--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,17 +3,17 @@
 
     {{!-- {{#each user_id as |result|}}
     {{> reservation_details }}
-    {{/each}}
+    {{/each}} --}}
     <div class="card-body">
-      {{!-- <a href="api/users/profile"class= "button1" id = "profileBtn">Find your reservations</a> --}}
-      <img src="/images/{{filename}}" alt="{{description}}"> --}}
-      <p>Name {{ user.first_name }}</p>
+      <a href="api/users/profile"class= "button1" id = "profileBtn">Find your saved reservations</a>
+      {{!-- <img src="/images/{{filename}}" alt="{{description}}"> --}}
+      <p>Name: {{ user.first_name }} {{ user.last_name }}</p>
 
-      {{!-- <p>Restaurant {{this.reservation.restaurant_id}}</p>
+      <p>Restaurant: {{ restaurant.name }}</p>
      
-      <p>Number in Party: {{num_guests}}</p> --}}
+      <p>Number in Party: {{ reservation.num_guests }}</p>
 
-      {{!-- <p>Table Number {{}}</p> --}}
+      <p>Table Number: {{ reservation.resturant_table_ref }}</p>
     </div>
 <div> <a href="/" class="button1">Return to Home</a>
 </div>
