--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,7 @@
 
 <div class="login-card">
     <h2 class="page-title">Signup</h2>
+    <p id="successText"></p>
     <p id="errorText"></p>
     <form class="form signup-form" id="submitForm">
       <div class="form-group">
