--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -1,5 +1,5 @@
 <div>
-  <div class="map-container">
+  <div class='map-container'>
     {{{restaurantObject.floorplan}}}
   </div>
 
@@ -13,35 +13,44 @@
         <form>
           <div class='slidecontainer'>
             <p>how many are in your party:</p>
-            <input type='range' min='1' max='10' value='2' class='slider' id='myRange' />
+            <input
+              type='range'
+              min='1'
+              max='10'
+              value='2'
+              class='slider'
+              id='myRange'
+            />
             <p>Reservation for: <span id='customer_id'></span></p>
-           
-            {{!-- <label for='fname'>First name:</label>
-            <input type='text' id='fname' name='fname' /><br /><br /> --}}
+
+            {{! <label for='fname'>First name:</label>
+            <input type='text' id='fname' name='fname' /><br /><br /> }}
           </div>
-          <button id="submit" type="submit">Make your Reservation</button>
+          <button id='submit' type='submit'>Make your Reservation</button>
         </form>
       </div>
+
       <div class='modal-footer'>
         <h3>thanks for choosing us for you reservation needs</h3>
       </div>
     </div>
   </div>
-
-  <script src="/js/floorPlanGUI.js"></script>
-  <script src="/js/modalHandler.js"></script>
+  <p id='confirmText'></p>
+  <p id='errorText'></p>
+  <script src='/js/floorPlanGUI.js'></script>
+  <script src='/js/modalHandler.js'></script>
 </div>
 
-{{!-- <input type="radio" id="pizza" name="fav_resturant" value="HTML">
+{{! <input type="radio" id="pizza" name="fav_resturant" value="HTML">
 <label for="html">pizza pizza</label><br>
 <input type="radio" id="css" name="fav_resturant" value="CSS">
 <label for="css">Burgers 'N Beer</label><br>
 <input type="radio" id="javascript" name="fav_resturant" value="JavaScript">
 <label for="javascript">Wanna TACO bout it</label>
 </form>
-<form action="/action_page.php" method="get"> --}}
+<form action="/action_page.php" method="get"> }}
 
-  {{!-- <label for="lname">
+{{! <label for="lname">
     <div class="dropdown">
 
 
@@ -53,4 +62,4 @@
         <a href="/resturantdetails">Link 2</a>
       </div>
     </div>
-  </label> --}}
+  </label> }}
