--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,15 +5,13 @@
     {{> reservation_details }}
     {{/each}} --}}
     <div class="card-body">
-      <a href="api/users/profile"class= "button1" id = "profileBtn">Find your saved reservations</a>
+      <a href="api/users/profile/reservations"class= "button1" id = "profileBtn">Find your saved reservations</a>
       {{!-- <img src="/images/{{filename}}" alt="{{description}}"> --}}
       <p>Name: {{ user.first_name }} {{ user.last_name }}</p>
 
-      <p>Restaurant: {{ restaurant.name }}</p>
+      <p>Phone: {{ user.phone_number }}</p>
      
-      <p>Number in Party: {{ reservation.num_guests }}</p>
-
-      <p>Table Number: {{ reservation.resturant_table_ref }}</p>
+      <p>Email: {{ user.email }}</p>
     </div>
 <div> <a href="/" class="button1">Return to Home</a>
 </div>
