--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,7 @@
           <img id='userimg' src='{{userimg}}' />
 
           <button id='logoutBtn' type='submit'>Logout</button>
+          <p id="errorText"></p>
 
         {{else}}
           <h1>Graphical Reservation</h1>
