--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,7 +5,7 @@
     {{> reservation_details }}
     {{/each}} --}}
     <div class="card-body">
-      <a href="api/users/profile"class= "button1" id = "profileBtn">Find your saved reservations</a>
+      <a href="../users/profile/reservations"class= "button1" id = "profileBtn">Find your saved reservations</a>
       {{!-- <img src="/images/{{filename}}" alt="{{description}}"> --}}
       <p>Name: {{ user.first_name }} {{ user.last_name }}</p>
 
