--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,8 @@
   <body>
     <header>
       <nav>
-        {{#if loggedIn}}<button class='dropbtn' onclick='myFunction()'>Menu<i
-              class='fa fa-caret-down'
-            ></i>
-          </button>
+        {{#if loggedIn}}
+
           <div class='dropdown-content' id='myDropdown'>
             <a href='/' class='button1'>Home</a>
             <a
@@ -21,18 +19,22 @@
               class='button1'
               id='profileBtn'
             >Profile</a>
-
+            <a
+              href="/api/users/profile/reservations"
+              class='button1'
+              id='profileBtn'
+            >Reservations</a>
           </div>
 
           <img id='userimg' src='{{userimg}}' />
 
-          <button id='logoutBtn' type='submit'>Logout</button>
+          <button id='logoutBtn' class='button1' type='submit'>Logout</button>
           <p id="errorText"></p>
 
         {{else}}
           <h1>Graphical Reservation</h1>
           
-          <a href='/login' class='button1'>Login</a>
+          <button id='loginBtn' class='button1'>Login</a>
         {{/if}}
       </nav>
     </header>
@@ -51,6 +53,8 @@
   {{#if loggedIn}}
     <script src='/js/logout.js'></script>
     <script src='js/navmenu.js'></script>
+  {{else}}
+    <script src='js/loginBtn.js'></script> 
   {{/if}}
 
 </html>
