--- a/public/css/style.css
+++ b/public/css/style.css
@@ -442,3 +442,48 @@ footer{
   background: #085a7a; 
   cursor: pointer; 
 }
+
+/* reservations page */
+
+th{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-decoration: underline;
+}
+
+td {
+  text-align: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: .25rem;
+}
+
+#returnhome {
+  margin-top: 3rem;
+  width: 15rem;
+}
+
+#resoheader {
+  text-align: center;
+}
+
+#resobutton {
+  margin-top: 3rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+  margin-bottom: .25rem;
+}
+
+h4 {
+  font-size: 1.75rem;
+  margin-bottom: .25rem;
+  padding: .25rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+  margin: .25rem;
+  padding: .25rem;
+}
