--- a/views/reservations.handlebars
+++ b/views/reservations.handlebars
@@ -1,12 +1,30 @@
 
-   <div> <p> My Reservations </p>
+   <div>
 
-    {{#each reservations as |reservation|}}
-    {{> reservationdetails }}
-    {{/each}}
+       <h2 id="resoheader"> My Reservations </h2>
+    
+    <div>
+      <table id="table" class="table table-hover align-middle">
+        <thead id='table-head'>
+          <th scope="col">Date</th>
+          <th scope="col">Time</th>
+          <th scope="col">Number of Guests</th>
+          <th scope="col">Restaurant</th>
+          <th scope="col">Table Number</th>
+        </thead>
+        <tbody id="table-body">
+           
+        {{#each reservations as |reservation|}} 
+        {{> reservationdetails }} 
+        {{/each}}
+        
+        </tbody>
+      </table>
+    </div>
 
 
-<div> <a href="/" class="button1">Return to Home</a>
+<div> 
+    {{!-- <a id="returnhome" href="/" class="button1">Return to Home</a> --}}
 </div>
    
 </div>
