styles search bar

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,8 @@
      {{#if loggedIn}}
         <div class="search">
           <input id="searchBar" type="text" placeholder="Find a Restaurant...">
-          <div id="searchBtn"></div>
+          <div id="searchClear" class="hidden">X</div>
+          <div id="searchBtn" class="hidden">Go</div>
             <script src="./js/searchHandler.js"></script>
         </div>
     {{else}} 
