--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,10 @@ h1{
   color: var(--light)
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 /* NAVBAR STUFF */
 
 nav {
@@ -121,33 +125,51 @@ a.button1:active, button:active{
   width: 40%;
   height: 5vh;
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #searchBar {
   width: inherit;
   height: inherit;
   border-radius: 20px;
-  background-color: gray;
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 0;
   border: 0 0 5px 0 solid white;
   position: absolute;
+  color: white;
+  font-size: 16px;
+  padding-left: 40px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 #searchBar::placeholder {
-  color:white;
+  color:rgba(255, 255, 255, 0.6);
   text-align: center;
-  font-size: 3vh;
+  font-size: 16px;
+}
+
+#searchClear {
+  cursor: pointer;
+  height: inherit;
+  width: 15px;
+  color: white;
+  margin-left: 15px;
+  margin-top: 3vh;
+  font-size: 16px;
+  font-weight: bolder;
+  z-index: 1;
 }
 
 #searchBtn {
   cursor: pointer;
-  height: inherit;
+  height: 3vh;
   width: 10%;
-  background-color: yellow;
+  background-color: green;
   border-radius: 20px;
   z-index: 1;
-  float: right;
+  margin-right: 10px;
+  text-align: center;
 }
 
 /* ABOUT APP CARDS */
