--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,4 +2,5 @@
     {{#each results as |result|}}
     {{> search-details }}
     {{/each}}
+    {{!-- <script src="/js/navmenu.js"></script> --}}
 </div>
