--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -37,6 +37,7 @@
   </div>
   <p id='confirmText'></p>
   <p id='errorText'></p>
+  <script src='/js/retaurantselect.js'></script>
   <script src='/js/floorPlanGUI.js'></script>
   <script src='/js/modalHandler.js'></script>
 </div>
