table select modal and reservation modal

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,9 +52,9 @@
   </body>
   {{#if loggedIn}}
     <script src='/js/logout.js'></script>
-    <script src='js/navmenu.js'></script>
+    <script src='/js/navmenu.js'></script>
   {{else}}
-    <script src='js/loginBtn.js'></script> 
+    <script src='/js/loginBtn.js'></script> 
   {{/if}}
 
 </html>
