updating style on profile, login, signup handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,18 @@
 <div>
+    <div id="login-card">
+        <h2 class="login">Account Login</h2>
     <form class="login-form">
-        <input id="email-login" type="email" placeholder="Email">
-        <input id="password-login" type="password" placeholder="Password">
+        
+        <label for="password" >E-mail</label>
+        <input id="email-login" class="logging" type="email" placeholder="Email"> 
+        <label for="password">Password</label>
+        <input id="password-login" class ="logging" type="password" placeholder="Password">
         <button id="loginBtn" type="submit">Login</button>
     </form>
+    </div>
     <p id="errorText"></p>
-    <a href="/" class="button1">Return to about me page</a>
+
+    
 </div>
 
 <script src="/js/loginHandler.js"></script>
