--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,14 +3,14 @@
     <div class="card-body">
 
       {{!-- <img src="/images/{{filename}}" alt="{{description}}"> --}}
-      <h2>{{ user.first_name }} {{ user.last_name }}</h5>
-      <h4>Email</h4>
+      <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+      <div class="user"><h4>Email:</h4>
 
       <h5>{{ user.email }}</h5>
-
-      <h4>Phone</h4>
+      </div>
+      <div class="user"><h4>Phone:</h4>
       <h5>{{ user.phone_number }}</h5>
-
+      </div>
       <p id="resobutton">
         <a href="../users/profile/reservations"class= "button1" id = "profileBtn"> My reservations</a>
       </p>
