--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,32 +1,32 @@
 
 <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+    <h2 class="page-title">Create Your Account</h2>
     <p id="successText"></p>
     <p id="errorText"></p>
     <form class="form signup-form" id="submitForm">
       <div class="form-group">
-        <label for="name-signup">Name:</label>
+        <label for="name-signup">Name</label>
         <input class="form-input" type="text" id="firstName-signup" placeholder="First" required autofocus/>
         <input class="form-input" type="text" id="lastName-signup" placeholder="Last" required/>
       </div>
       <div class="form-group">
-        <label for="email-signup">Email:</label>
+        <label for="email-signup">Email</label>
         <input class="form-input" type="email" placeholder = "email@email.com" id="email-signup" required/>
       </div>
       <div class="form-group">
-        <label for="phone-signup">Phone Number:</label>
-        <input class="form-input" type="tel" placeholder="16145326732" id="phone-signup" required/>
+        <label for="phone-signup">Phone Number</label>
+        <input class="form-input" type="tel" placeholder="1-614-867-5309" id="phone-signup" required/>
       </div>
       <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" placeholder="password" id="passOne-signup" required/>
+        <label for="password-signup">Password</label>
+        <input class="form-input" type="password" placeholder="Password" id="passOne-signup" required/>
       </div>
       <div class="form-group">
-        <label for="password-signup">Confirm Password:</label>
-        <input class="form-input" type="password" placeholder="password" id="passTwo-signup" required/>
+        <label for="password-signup">Confirm Password</label>
+        <input class="form-input" type="password" placeholder="Password" id="passTwo-signup" required/>
       </div>
       <div class="form-group">
-        <button id="submit" type="submit">signup</button>
+        <button id="submit" type="submit">sign up</button>
       </div>
     </form>
   </div>
