resolving merge in pull

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -522,7 +522,9 @@ footer{
   width: 100%;
   height: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .map-container {
